Fix contrast issues in titles

--- a/css/stylus/skinny.styl
+++ b/css/stylus/skinny.styl
@@ -1,3 +1,5 @@
+@require "./variables.styl"
+
 positionSection()
   margin 0 auto
   max-width 1200px
@@ -67,7 +69,7 @@ ul
   font-weight 300
   font-size 1.16rem
   text-align center
-  color #888
+  color $textColor
 
 .wrap
   width 100%
@@ -151,7 +153,7 @@ ul
   position relative
   list-style-type none
   line-height 1.8
-  color #888
+  color $textColor
   font-size 1.1em
   font-weight 300
 
@@ -160,12 +162,13 @@ ul
   position absolute
   left 0
   font-weight 600
+  color: inherit
 
 .card__list.blue li:before
-  color #5d9eda
+  color $blue
 
 .card__list.green li:before
-  color #43d6a2
+  color $green
 
 .half
   width 100%
@@ -190,7 +193,7 @@ ul
 .button-link
   display inline-block
   padding 8px 20px
-  background #43d6a2
+  background $green
   border-radius 20px
   border-bottom none
 
@@ -201,3 +204,14 @@ ul
   letter-spacing 1px
   font-size 1.3rem
 
+.blue
+  color $blue
+
+.blue-light
+  color $blue-light
+
+.green
+  color $green
+
+.green-light
+  color $green-light
